Add culler timeout set
